Fix compilation (method toList() is not available in Java 11)